--- a/templates/hekmat.html
+++ b/templates/hekmat.html
@@ -1,36 +1,22 @@
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.rtl.min.css" integrity="sha384-trxYGD5BY4TyBTvU5H23FalSCYwpLA0vWEvXXGm5eytyztxb+97WzzY+IWDOSbav" crossorigin="anonymous">
-    <title>شبایاب</title>
-</head>
-<body>
-  <div class="container-fluid">
-    <h1 class="text-center">
-       پروژه آزاد محاسبه شناسه شبا (در حال توسعه)
-    </h1> 
-  </div>
+{% include "header.html" %}
 
-  <div class="container-fluid">
+
 <div class="container-fluid">
     <div class="row text-center">
       <div class="col-sm">
         <h3>شماره حساب را وارد کنید:</h3>
-
-        <form action="/hekmat" method="POST">
-          <label for="img">شماره حساب حکمت ایرانیان:</label>
-          <input name="accountnumber"><br><br>
-          <input class="btn btn-primary" type="submit" value="محاسبه">
-        </form>
+        <div class="form-group"></div>
+            <form action="/hekmat" method="POST">
+                <label for="accountnumber" class="col-sm-2 col-form-label" >شماره حساب حکمت ایرانیان:</label>
+                <input name="accountnumber"><br><br>
+                <input class="btn btn-primary" type="submit" value="محاسبه">
+            </form>
+        </div>
         {% if iban%}
         <h3>{{ iban }}</h3>
         {% endif %}
       </div>
     </div>
-  </div>
     
 
 
