--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
     <div class="row">
           <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='ayandeh.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/ayandeh" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='ayandeh.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک آینده</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/ayandeh" target="_blank">بانک آینده</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -48,9 +48,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='tejarat.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/tejarat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='tejarat.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک تجارت</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/tejarat" target="_blank">بانک تجارت</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -66,9 +66,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="/hekmat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='hekmat-iranian.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/hekmat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='hekmat-iranian.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="/hekmat" target="_blank">بانک حکمت ایرانیان</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/hekmat" target="_blank">بانک حکمت ایرانیان</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -84,9 +84,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='refah.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/refah" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='refah.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک رفاه کارگران</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/refah" target="_blank">بانک رفاه کارگران</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -120,9 +120,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='saderat.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/saderat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='saderat.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک صادرات ایران</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/saderat" target="_blank">بانک صادرات ایران</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -156,9 +156,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='keshavarzi.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/keshavarzi" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='keshavarzi.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک کشاورزی</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/keshavarzi" target="_blank">بانک کشاورزی</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -180,15 +180,15 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="/mellat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='mellat.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/mellat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='mellat.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="/mellat" target="_blank">بانک ملت</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/mellat" target="_blank">بانک ملت</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='melli.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/melli" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='melli.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک ملی ایران</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/melli" target="_blank">بانک ملی ایران</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
