set saman shahr parsian links in index

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='parsian.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/parsian" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='parsian.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک پارسیان</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/parsian" target="_blank">بانک پارسیان</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -90,9 +90,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='saman.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/saman" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='saman.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک سامان</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/saman" target="_blank">بانک سامان</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -114,9 +114,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='shahr.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/shahr" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='shahr.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک شهر</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/shahr" target="_blank">بانک شهر</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
