set dey,khavarmiane,karafarin,sepah and kosar fci in index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,15 +72,15 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='middle-east.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/khavarmiane" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='middle-east.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک خاورمیانه</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/khavarmiane" target="_blank">بانک خاورمیانه</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='dey.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/dey" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='dey.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک دی</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/dey" target="_blank">بانک دی</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -96,9 +96,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='sepah.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/sepah" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='sepah.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک سپه</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/sepah" target="_blank">بانک سپه</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -150,9 +150,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='karafarin.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/karafarin" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='karafarin.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک کارآفرین</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/karafarin" target="_blank">بانک کارآفرین</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -216,9 +216,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='kosar.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/kosar" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='kosar.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">موسسه اعتباری کوثر</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/kosar" target="_blank">موسسه اعتباری کوثر</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
