add ansar eghtesadnovin iranzamin sanatmadan sarmayeh tosesaderat tosetavon

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,15 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='eghtesad-novin.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/eghnovin" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='eghtesad-novin.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک اقتصاد نوین</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/eghnovin" target="_blank">بانک اقتصاد نوین</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='ansar.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/ansar" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='ansar.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک انصار</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/ansar" target="_blank">بانک انصار</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -42,9 +42,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='pasargad.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/pasargad" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='pasargad.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک پاسارگاد</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/pasargad" target="_blank">بانک پاسارگاد</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -54,15 +54,15 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='tosee-taavon.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/tosetavon" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='tosee-taavon.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک توسعه تعاون</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/tosetavon" target="_blank">بانک توسعه تعاون</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='export-development.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/tosesaderat" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='export-development.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک توسعه صادرات ایران</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/tosesaderat" target="_blank">بانک توسعه صادرات ایران</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -102,9 +102,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='sarmayeh.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/sarmayeh" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='sarmayeh.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک سرمایه</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/sarmayeh" target="_blank">بانک سرمایه</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
@@ -126,9 +126,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='industry-and-mine.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/sanatmadan" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='industry-and-mine.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک صنعت و معدن</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/sanatmadan" target="_blank">بانک صنعت و معدن</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
