--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
-                <div class="field-content"><a href="#" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='iran-zamin.png')}}" alt="" width="150" height="150"></a></div>
+                <div class="field-content"><a href="/acnttoiban/iranzamin" target="_blank"><img typeof="foaf:Image" src="{{url_for('static', filename='iran-zamin.png')}}" alt="" width="150" height="150"></a></div>
              </div>
-             <div class="text-center"><span class="field-content"><a href="#" target="_blank">بانک ایران زمین</a></span></div>
+             <div class="text-center"><span class="field-content"><a href="/acnttoiban/iranzamin" target="_blank">بانک ایران زمین</a></span></div>
           </div>
            <div class="col-sm text-center">
              <div class="views-field views-field-field-image">
