--- a/templates/acnttoiban/refah.html
+++ b/templates/acnttoiban/refah.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}تبدیل شماره حساب بانک رفاه به شماره شبا{% endblock %}
+{% block title %}
+    <title>تبدیل شماره حساب بانک رفاه به شماره شبا</title>
+{% endblock %}
 {% block head %}
     {{ super() }}
     <style type="text/css">
