--- a/templates/acnttoiban/pasargad.html
+++ b/templates/acnttoiban/pasargad.html
@@ -11,7 +11,8 @@
 <div class="container-fluid">
     <div class="row text-center">
       <div class="col-sm">
-        <h3>شماره حساب را وارد کنید:</h3>
+        <h3>لطفا شماره حساب را به قالب مشخص شده وارد کنید. مثلا:</h3><br></br>
+        <h4>217-800-12345678-1</h4><br></br>
         <div class="form-group"></div>
             <form action="/acnttoiban/pasargad" method="POST">
                 <label for="accountnumber" class="col-sm-2 col-form-label" >شماره حساب پاسارگاد  :</label>
