--- a/templates/acnttoiban/gardeshgari.html
+++ b/templates/acnttoiban/gardeshgari.html
@@ -18,6 +18,11 @@
                 <input name="accountnumber"><br><br>
                 <input class="btn btn-primary" type="submit" value="محاسبه">
             </form>
+            <br></br>
+            <a class="btn btn-outline-primary" href="/" role="button">
+                بازگشت به صفحه اصلی
+            </a>
+              <br></br>
         </div>
         {% if iban%}
         <h3>{{ iban }}</h3>
