--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,87 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
     <head>
+        <title>{% block title %}{% endblock %}</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="{{url_for('static', filename='favicon.png')}}" type="image/png" sizes="16x16">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/animate.css')}}"> <!-- Resource style -->
+        <link rel="stylesheet" href="{{url_for('static', filename='css/owl.carousel.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/owl.theme.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/ionicons.min.css')}}"> <!-- Resource style -->
+        <link href="{{url_for('static', filename='css/style.css')}}" rel="stylesheet" type="text/css" media="all" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.rtl.min.css" integrity="sha384-trxYGD5BY4TyBTvU5H23FalSCYwpLA0vWEvXXGm5eytyztxb+97WzzY+IWDOSbav" crossorigin="anonymous">
     </head>
 <body>
-    <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">شبایاب</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/herotux/shabayab">کد منبع پروژه</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/herotux/shabayab/issues">گزارش اشکال</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://t.me/freetux">تماس با من(تلگرام)</a>
-        </li>
-      </ul>
+  <div class="wrapper">
+    <!-- Navbar Section -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+      <div class="container container-s">
+        <a class="navbar-brand" href="#">شبایاب.</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto navbar-right">
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/herotux/shabayab">کد منبع پروژه</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/herotux/shabayab/issues">گزارش اشکال</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://t.me/freetux">تماس با من(تلگرام)</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav><!-- Navbar End -->
       <div class="jumbotron text-center bg-primary text-white">
-        <h1 class="display-4">پروژه آزاد محاسبه شناسه شبا (در حال توسعه)</h1>
-        <p class="lead">این یک پروژه تفریحی است ولی تضمین میکنم کار میکنه!</p>
+        <h1 class="display-4"></h1>
+        <p class="lead"></p>
         <hr class="my-4">
     </div>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% include "footer.html" %}
-        {% block footer %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        {% endblock %}
-    </div>
+    <div id="main" class="main">
+      <div class="home"><!-- Hero Section-->
+        <div class="container">
+          {% block content %}{% endblock %}
+        </div>
+      </div><!-- Hero End -->
+      <!--  Footer Section -->
+      <div class="footer-sm">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <a class="footer-logo" href="#">shabayab.</a>
+            </div>
+            <div class="col-md-4">
+              <h6>&copy; freetux</h6>
+            </div>
+            <div class="col-md-4">
+              <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Linkedin</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+     <!-- Scroll To Top -->
+      <div id="back-top" class="bk-top">
+        <div class="bk-top-txt">
+           <a class="back-to-top js-scroll-trigger" href="#main">top</a>
+        </div>
+      </div>
+     <!-- Scroll To Top Ends-->
+
+    </div> <!-- Main -->
+  </div><!-- Wrapper -->
+
+  <!-- Jquery and Js Plugins -->
+  <script type="text/javascript" src="{{url_for('static', filename='js/jquery-2.1.1.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/popper.min.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/jquery.validate.min.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/plugins.js')}}"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/custom.js')}}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
