--- a/templates/index.html
+++ b/templates/index.html
@@ -161,9 +161,9 @@
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
-                        <div class="field-content"><a href="#" ><img typeof="foaf:Image" src="{{url_for('static', filename='mehr-iran.png')}}" alt="" width="150" height="150"></a></div>
+                        <div class="field-content"><a href="/acnttoiban/mehriran" ><img typeof="foaf:Image" src="{{url_for('static', filename='mehr-iran.png')}}" alt="" width="150" height="150"></a></div>
                      </div>
-                     <div class="text-center"><span class="field-content"><a href="#" >بانک قرض الحسنه مهر ایران</a></span></div>
+                     <div class="text-center"><span class="field-content"><a href="/acnttoiban/mehriran" >بانک قرض الحسنه مهر ایران</a></span></div>
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
