add postbank meal etebaritose iranvenezola noor

--- a/templates/index.html
+++ b/templates/index.html
@@ -221,21 +221,21 @@
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
-                        <div class="field-content"><a href="#" ><img typeof="foaf:Image" src="{{url_for('static', filename='post-bank.png')}}" alt="" width="150" height="150"></a></div>
+                        <div class="field-content"><a href="/acnttoiban/postbank" ><img typeof="foaf:Image" src="{{url_for('static', filename='post-bank.png')}}" alt="" width="150" height="150"></a></div>
                      </div>
-                     <div class="text-center"><span class="field-content"><a href="#" >پست بانک ایران</a></span></div>
+                     <div class="text-center"><span class="field-content"><a href="/acnttoiban/postbank" >پست بانک ایران</a></span></div>
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
-                        <div class="field-content"><a href="#" ><img typeof="foaf:Image" src="{{url_for('static', filename='tosseh.png')}}" alt="" width="150" height="150"></a></div>
+                        <div class="field-content"><a href="/acnttoiban/etebaritose" ><img typeof="foaf:Image" src="{{url_for('static', filename='tosseh.png')}}" alt="" width="150" height="150"></a></div>
                      </div>
-                     <div class="text-center"><span class="field-content"><a href="#" >موسسه اعتباری توسعه</a></span></div>
+                     <div class="text-center"><span class="field-content"><a href="/acnttoiban/etebaritose" >موسسه اعتباری توسعه</a></span></div>
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
-                        <div class="field-content"><a href="#" ><img typeof="foaf:Image" src="{{url_for('static', filename='melal.png')}}" alt="" width="150" height="150"></a></div>
+                        <div class="field-content"><a href="/acnttoiban/etebarimelal" ><img typeof="foaf:Image" src="{{url_for('static', filename='melal.png')}}" alt="" width="150" height="150"></a></div>
                      </div>
-                     <div class="text-center"><span class="field-content"><a href="#" >موسسه اعتباری ملل (عسکریه)</a></span></div>
+                     <div class="text-center"><span class="field-content"><a href="/acnttoiban/etebarimelal" >موسسه اعتباری ملل (عسکریه)</a></span></div>
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
@@ -245,9 +245,9 @@
                   </div>
                   <div class="col-sm text-center">
                      <div class="views-field views-field-field-image">
-                        <div class="field-content"><a href="#" ><img typeof="foaf:Image" src="{{url_for('static', filename='noor.png')}}" alt="" width="150" height="150"></a></div>
+                        <div class="field-content"><a href="/acnttoiban/iranvenezola" ><img typeof="foaf:Image" src="{{url_for('static', filename='ivb.png')}}" alt="" width="150" height="150"></a></div>
                      </div>
-                     <div class="text-center"><span class="field-content"><a href="#" >موسسه اعتباری نور</a></span></div>
+                     <div class="text-center"><span class="field-content"><a href="/acnttoiban/iranvenezola" >بانک ایران ونزوئلا</a></span></div>
                   </div>
                 </div>
               </div>
