--- a/templates/acnttoiban/etebaritose.html
+++ b/templates/acnttoiban/etebaritose.html
@@ -12,17 +12,12 @@
     <div class="row text-center">
       <div class="col-sm">
         <h3>شماره حساب را وارد کنید:</h3>
-        <div class="form-group"></div>
+        <div class="form-group">
             <form action="/acnttoiban/etebaritose" method="POST">
                 <label for="accountnumber" class="col-sm-2 col-form-label" >شماره حساب موسسه اعتباری توسعه :</label>
                 <input name="accountnumber"><br><br>
                 <input class="btn btn-primary" type="submit" value="محاسبه">
             </form>
-            <br></br>
-            <a class="btn btn-outline-primary" href="/" role="button">
-                بازگشت به صفحه اصلی
-            </a>
-              <br></br>
             <br></br>
             <a class="btn btn-outline-primary" href="/" role="button">
                 بازگشت به صفحه اصلی
