--- a/templates/acnttoiban/refah.html
+++ b/templates/acnttoiban/refah.html
@@ -14,7 +14,7 @@
     <div class="row text-center">
       <div class="col-sm">
         <h3>شماره حساب را وارد کنید:</h3>
-        <div class="form-group"></div>
+        <div class="form-group">
             <form action="/acnttoiban/refah" method="POST">
                 <label for="accountnumber" class="col-sm-2 col-form-label" >شماره حساب بانک رفاه :</label>
                 <input name="accountnumber"><br><br>
