--- a/templates/acnttoiban/resalat.html
+++ b/templates/acnttoiban/resalat.html
@@ -12,7 +12,7 @@
     <div class="row text-center">
       <div class="col-sm">
         <h3>شماره حساب را وارد کنید:</h3>
-        <div class="form-group"></div>
+        <div class="form-group">
             <form action="/acnttoiban/resalat" method="POST">
                 <label for="accountnumber" class="col-sm-2 col-form-label" >شماره حساب رسالت  :</label>
                 <input name="accountnumber"><br><br>
